--- a/Services/Catalog/FreeCourse.Services.Catalog/FreeCourse.Services.Catalog.csproj
+++ b/Services/Catalog/FreeCourse.Services.Catalog/FreeCourse.Services.Catalog.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
